[tool.poetry]
name = "hydrological-analysis-tool"
version = "0.1.0"
description = ""
authors = ["Sam Murphy <sam.murphy@ecmwf.int>"]
readme = "README.md"
packages = [{include = "hydrological_analysis_tool"}]

[tool.poetry.dependencies]
python = "3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
